<resources>
    <string name="app_name">Talks</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_custom_title"><strong>TED</strong></string>
    <string name="newest">Newest</string>
    <string name="trending">Trending</string>
    <string name="most_viewed">Most viewed</string>
    <string name="hidden_gems">Hidden gems</string>
    <string name="lbl_refersh">Refresh</string>
    <string name="msg_generic_no_data">No data to display.</string>
    <string name="talk_title_placeholder">What comes after tragedy?  Forgiveness</string>
    <string name="talker_placeholder">Azim Khamisa and Ples Felix</string>
    <string name="talk_time_placeholder">13:06</string>
    <string name="talk_count_placeholder">7 talks</string>
    <string name="talk_time_playlist_placeholder">1:12:27</string>
    <string name="title_playlist_placeholder">Why not walk it out?</string>
    <string name="radio_hour">TED Radio Hour on NPR</string>
    <string name="sincerely_x">Sincerely, X</string>
    <string name="radio_hour_title">Transparency</string>
    <string name="recommended_topics">Recommended topics</string>
    <string name="topics_plachholder">Foreign Policy</string>
    <string name="show_all_topics">Show all topics</string>
    <string name="recommended_speakers">Recommended speakers</string>
    <string name="show_all_speakers">Show all speakers</string>
    <string name="recommended_subtitle_lang">Recommended subtitle languages</string>
    <string name="show_all_subtitle_lang">Show all subtitle languages</string>
    <string name="recommended_events">Recommended events</string>
    <string name="show_all_events">Show all events</string>
</resources>
