<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:layout_marginTop="@dimen/margin_medium"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_item_newest_height">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/tedtalkviewholder" />

        <TextView
            android:id="@+id/tv_talk_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_medium_1"
            android:layout_marginEnd="@dimen/margin_xxxlarge"
            android:layout_marginStart="@dimen/margin_medium"
            android:maxLines="3"
            android:text="@string/talk_title_placeholder"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_talker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_talk_title"
            android:layout_marginEnd="@dimen/margin_xxlarge"
            android:layout_marginStart="@dimen/margin_medium"
            android:singleLine="true"
            android:text="@string/talker_placeholder"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_talked_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/margin_medium_1"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/talk_time_placeholder"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_talked_time"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_small"
            android:src="@drawable/ic_more_vert_24dp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>