<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginLeft="@dimen/margin_small"
    android:layout_marginRight="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_medium"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_playlists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/tedtalkviewholder" />

        <TextView
            android:id="@+id/tv_talk_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/talk_count_placeholder"
            android:textColor="@color/light_gray" />

        <View
            android:id="@+id/v_divider"
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_toEndOf="@id/tv_talk_count"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/tv_talked_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_toEndOf="@id/v_divider"
            android:text="@string/talk_time_playlist_placeholder"
            android:textColor="@color/light_gray" />

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium"
            android:src="@drawable/ic_more_vert_24dp" />

        <TextView
            android:id="@+id/tv_playlist_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/v_divider"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_xxlarge"
            android:gravity="bottom"
            android:paddingStart="@dimen/margin_medium"
            android:text="@string/title_playlist_placeholder"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_3x" />
    </RelativeLayout>

</android.support.v7.widget.CardView>